fix: align sidebar starting positions
Move the right table of contents to the page wrapper level and tune sidebar spacing so the left and right sidebars start from a consistent height.

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -48,6 +48,7 @@ body {
   }
 
   .page__inner-wrap {
+    position: relative;
     float: left;
     margin-top: 1em;
     margin-left: 0;
